--- a/main.html
+++ b/main.html
@@ -8,19 +8,22 @@
         <nav>
             <ul>
                 <li class="HeaderNadpis HomeIcon"><a href="main.html">Home</a></li>
-                <li class="HeaderNadpis PuzzlesIcon"><a href="">Puzzles</a></li>
-                <li class="HeaderLogo HeaderText"><a href="main.html"></a></li>
-                <li class="HeaderNadpis SmartIcon"><a href="">Smart games</a></li>
-                <li class="HeaderNadpis MeIcon"><a href="">About me</a></li>
+                <li class="HeaderNadpis PuzzlesIcon"><a href="puzzles.html">Puzzles</a></li>
+                <li class="HeaderLogo HeaderText"><a href="main.html">Logo</a></li>
+                <li class="HeaderNadpis SmartIcon"><a href="sg.html">Smart games</a></li>
+                <li class="HeaderNadpis MeIcon"><a href="aboutme.html">About me</a></li>
             </ul>
         </nav>
     </header>
-    <div class="Uvod">
-    <h1 class="UvodNadpis">AJ collection</h1>
-    </div>
+    <section class="Uvod">
+        <div>
+            <p class="UvodNadpis">AJ collection</p>
+            <div class="UvodObrazek"></div>
+        </div>
+    </section>
     <section>
         <div class="welcome Obrazek">
-            <b class="welcomeNad NadpisPravo Nadpis">Welcome</b>
+            <p class="welcomeNad NadpisPravo Nadpis">Welcome</p>
             <p class="Text TextPravo TextWel">
                 Hello friend,<br>
                 look at my weird website <br>
@@ -29,7 +32,7 @@
             </p>
         </div>
         <div class="puzzles SekceDIV Obrazek">
-            <b class="NadpisLevo Nadpis">Puzzles</b>
+            <p class="NadpisLevo Nadpis">Puzzles</p>
             <p class="Text TextLevo">
                 Check out <br>
                 my collection of puzzles,<br>
@@ -37,10 +40,10 @@
                 from wooden and metal<br>
                 to Rubik's cubes <br>
                 to unique items </p>
-            <button onclick="location.href=''"type="button" class="Tlacidlo"></button>
+            <button onclick="location.href=''"type="button" class="Tlacidlo TlacLevo"></button>
         </div>
         <div class="smart-games SekceDIV Obrazek">
-            <b class="NadpisPravo Nadpis">Smart games</b>
+            <p class="NadpisPravo Nadpis">Smart games</p>
             <p class="Text TextPravo">
             These things are fun,<br>
             some of them are even <br>
@@ -50,14 +53,14 @@
             They have many difficulties <br>
             ranging from children <br>
             to a smart adult. XD</p>
-            <button onclick="location.href=''"type="button" class="Tlacidlo"></button>
+            <button onclick="location.href='sg.html'"type="button" class="Tlacidlo TlacPravo"></button>
         </div>
         <div class="me SekceDIV Obrazek">
-            <b class="NadpisLevo Nadpis">About me</b>
+            <p class="NadpisLevo Nadpis">About me</p>
             <p class="Text TextLevo">Wanna know more <br>
                 about me? <br>
                 Really?</p>
-            <button onclick="location.href=''"type="button" class="meTlac Tlacidlo"></button>
+            <button onclick="location.href='aboutme.html'"type="button" class="meTlac Tlacidlo TlacLevo"></button>
         </div>
     </section>
     <p class="socials">Socials</p>
